--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/dirichlet/shoufish:{{ now("YYYYMMDDHHmmss") }}
+          tags: ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/dirichlet/shoufish:${{ now("YYYYMMDDHHmmss") }}
